test/trivial/shannon/readWriteBool.good
true
false
readWriteBool.chpl:9: error: Unhandled system error: bad format (1002) in channel.read(inout a:bool) with path readWriteBool.stdin offset 11
